--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 
     <div class="text-data">
         <span class="name">BeautyLia</span>
-        <span class="job">Youtuber & Blogger</span>
+        <span class="job">Youtuber</span>
     </div>
 
     <div class="media-buttons">
